--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: person( "Kruse", "Paul", email = "kruse.paul@epa.gov", role =
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line) Use four
     spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL (>= 3)
 Imports: 
     httr,
     jsonlite
