--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,4 @@ export(get_chem_info)
 export(get_chemical_details)
 export(get_chemicals_in_list)
 export(get_fate_by_dtxsid)
+export(get_lists_containing_chemical)
