Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,4 @@ export(get_chemical_details)
 export(get_chemicals_in_list)
 export(get_fate_by_dtxsid)
 export(get_lists_containing_chemical)
+export(get_public_chemical_list_by_name)
