--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(get_all_public_chemical_lists)
 export(get_chem_info)
 export(get_chemical_details)
 export(get_chemical_lists_by_type)
-export(get_chemical_mrv_by_dtxsid)
+export(get_chemical_mrv)
 export(get_chemicals_in_list)
 export(get_fate_by_dtxsid)
 export(get_lists_containing_chemical)
