--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(get_all_public_chemical_lists)
 export(get_chem_info)
 export(get_chemical_details)
+export(get_chemical_image)
 export(get_chemical_lists_by_type)
 export(get_chemical_mol)
 export(get_chemical_mrv)
