Added function exports.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(get_chemical_lists_by_type)
 export(get_chemical_mol)
 export(get_chemical_mrv)
 export(get_chemicals_in_list)
+export(get_ecotox_hazard_by_dtxsid)
 export(get_fate_by_dtxsid)
+export(get_hazard_by_dtxsid)
+export(get_human_hazard_by_dtxsid)
 export(get_lists_containing_chemical)
 export(get_public_chemical_list_by_name)
