Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,5 @@ export(get_fate_by_dtxsid)
 export(get_hazard_by_dtxsid)
 export(get_human_hazard_by_dtxsid)
 export(get_lists_containing_chemical)
+export(get_msready_by_mass)
 export(get_public_chemical_list_by_name)
