--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_fate_by_dtxsid)
 export(get_hazard_by_dtxsid)
 export(get_human_hazard_by_dtxsid)
 export(get_lists_containing_chemical)
+export(get_msready_by_dtxcid)
 export(get_msready_by_formula)
 export(get_msready_by_mass)
 export(get_public_chemical_list_by_name)
