--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(chemical_contains)
 export(chemical_equal)
+export(chemical_starts_with)
 export(get_all_public_chemical_lists)
 export(get_bioactivity_details)
 export(get_chem_info)
