--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Suggests: 
+    countcolors,
     knitr,
-    rmarkdown
+    rmarkdown,
+    XML
 VignetteBuilder: knitr
