--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_bioactivity_details)
 export(get_chem_info)
 export(get_chemical_by_property_range)
 export(get_chemical_details)
+export(get_chemical_details_batch)
 export(get_chemical_image)
 export(get_chemical_lists_by_type)
 export(get_chemical_mol)
