--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(chemical_starts_with)
 export(get_all_public_chemical_lists)
 export(get_bioactivity_details)
 export(get_chem_info)
+export(get_chem_info_batch)
 export(get_chemical_by_property_range)
 export(get_chemical_details)
 export(get_chemical_details_batch)
