Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_chemical_mrv)
 export(get_chemicals_in_list)
 export(get_ecotox_hazard_by_dtxsid)
 export(get_fate_by_dtxsid)
+export(get_fate_by_dtxsid_batch)
 export(get_hazard_by_dtxsid)
 export(get_human_hazard_by_dtxsid)
 export(get_lists_containing_chemical)
