--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(chemical_contains)
 export(chemical_equal)
+export(chemical_equal_batch)
 export(chemical_starts_with)
 export(chemical_starts_with_batch)
 export(get_all_public_chemical_lists)
