--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(get_fate_by_dtxsid_batch)
 export(get_hazard_by_dtxsid)
 export(get_human_hazard_by_dtxsid)
 export(get_lists_containing_chemical)
+export(get_ms_ready_by_mass_batch)
 export(get_msready_by_dtxcid)
 export(get_msready_by_formula)
 export(get_msready_by_mass)
