--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(get_lists_containing_chemical)
 export(get_ms_ready_by_formula_batch)
 export(get_ms_ready_by_mass_batch)
 export(get_msready_by_dtxcid)
+export(get_msready_by_dtxcid_batch)
 export(get_msready_by_formula)
 export(get_msready_by_mass)
 export(get_public_chemical_list_by_name)
