--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_chemical_details)
 export(get_chemical_details_batch)
 export(get_chemical_image)
 export(get_chemical_lists_by_type)
+export(get_chemical_lists_by_type_batch)
 export(get_chemical_mol)
 export(get_chemical_mrv)
 export(get_chemicals_in_list)
