Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,3 +32,4 @@ export(get_msready_by_formula_batch)
 export(get_msready_by_mass)
 export(get_msready_by_mass_batch)
 export(get_public_chemical_list_by_name)
+export(get_public_chemical_list_by_name_batch)
