Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(get_fate_by_dtxsid_batch)
 export(get_hazard_by_dtxsid)
 export(get_human_hazard_by_dtxsid)
 export(get_lists_containing_chemical)
+export(get_lists_containing_chemical_batch)
 export(get_msready_by_dtxcid)
 export(get_msready_by_dtxcid_batch)
 export(get_msready_by_formula)
