Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(get_chemical_lists_by_type_batch)
 export(get_chemical_mol)
 export(get_chemical_mrv)
 export(get_chemicals_in_list)
+export(get_chemicals_in_list_batch)
 export(get_ecotox_hazard_by_dtxsid)
 export(get_fate_by_dtxsid)
 export(get_fate_by_dtxsid_batch)
