Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_chemical_image)
 export(get_chemical_lists_by_type)
 export(get_chemical_lists_by_type_batch)
 export(get_chemical_mol)
+export(get_chemical_mol_batch)
 export(get_chemical_mrv)
 export(get_chemical_mrv_batch)
 export(get_chemicals_in_list)
