--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_chemical_by_property_range)
 export(get_chemical_details)
 export(get_chemical_details_batch)
 export(get_chemical_image)
+export(get_chemical_image_batch)
 export(get_chemical_lists_by_type)
 export(get_chemical_lists_by_type_batch)
 export(get_chemical_mol)
