--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(chemical_starts_with)
 export(chemical_starts_with_batch)
 export(get_all_public_chemical_lists)
 export(get_bioactivity_details)
+export(get_bioactivity_details_batch)
 export(get_chem_info)
 export(get_chem_info_batch)
 export(get_chemical_by_property_range)
