--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(get_ecotox_hazard_by_dtxsid)
 export(get_fate_by_dtxsid)
 export(get_fate_by_dtxsid_batch)
 export(get_hazard_by_dtxsid)
+export(get_hazard_by_dtxsid_batch)
 export(get_human_hazard_by_dtxsid)
 export(get_lists_containing_chemical)
 export(get_lists_containing_chemical_batch)
