Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(get_chemical_mrv_batch)
 export(get_chemicals_in_list)
 export(get_chemicals_in_list_batch)
 export(get_ecotox_hazard_by_dtxsid)
+export(get_ecotox_hazard_by_dtxsid_batch)
 export(get_fate_by_dtxsid)
 export(get_fate_by_dtxsid_batch)
 export(get_hazard_by_dtxsid)
