--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(get_chemical_mol)
 export(get_chemical_mol_batch)
 export(get_chemical_mrv)
 export(get_chemical_mrv_batch)
+export(get_chemical_synonym)
 export(get_chemicals_in_list)
 export(get_chemicals_in_list_batch)
 export(get_ecotox_hazard_by_dtxsid)
