--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(chemical_starts_with_batch)
 export(get_all_public_chemical_lists)
 export(get_bioactivity_details)
 export(get_bioactivity_details_batch)
+export(get_cancer_hazard)
 export(get_chem_info)
 export(get_chem_info_batch)
 export(get_chemical_by_property_range)
@@ -43,3 +44,4 @@ export(get_msready_by_mass)
 export(get_msready_by_mass_batch)
 export(get_public_chemical_list_by_name)
 export(get_public_chemical_list_by_name_batch)
+export(get_skin_eye_hazard)
