Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(get_ecotox_hazard_by_dtxsid)
 export(get_ecotox_hazard_by_dtxsid_batch)
 export(get_fate_by_dtxsid)
 export(get_fate_by_dtxsid_batch)
+export(get_genetox_summary)
 export(get_hazard_by_dtxsid)
 export(get_hazard_by_dtxsid_batch)
 export(get_human_hazard_by_dtxsid)
