--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,3 +48,4 @@ export(get_msready_by_mass_batch)
 export(get_public_chemical_list_by_name)
 export(get_public_chemical_list_by_name_batch)
 export(get_skin_eye_hazard)
+export(get_skin_eye_hazard_batch)
