Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_all_public_chemical_lists)
 export(get_bioactivity_details)
 export(get_bioactivity_details_batch)
 export(get_cancer_hazard)
+export(get_cancer_hazard_batch)
 export(get_chem_info)
 export(get_chem_info_batch)
 export(get_chemical_by_property_range)
