Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(get_fate_by_dtxsid)
 export(get_fate_by_dtxsid_batch)
 export(get_genetox_details)
 export(get_genetox_summary)
+export(get_genetox_summary_batch)
 export(get_hazard_by_dtxsid)
 export(get_hazard_by_dtxsid_batch)
 export(get_human_hazard_by_dtxsid)
