--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,5 +21,7 @@ Suggests:
     devtools,
     knitr,
     rmarkdown,
+    testthat (>= 3.0.0),
     XML
 VignetteBuilder: knitr
+Config/testthat/edition: 3
