Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_cancer_hazard_batch)
 export(get_chem_info)
 export(get_chem_info_batch)
 export(get_chemical_by_property_range)
+export(get_chemical_by_property_range_batch)
 export(get_chemical_details)
 export(get_chemical_details_batch)
 export(get_chemical_image)
