--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,12 @@ export(chemical_equal)
 export(chemical_equal_batch)
 export(chemical_starts_with)
 export(chemical_starts_with_batch)
+export(get_all_assays)
 export(get_all_public_chemical_lists)
+export(get_annotation_by_aeid)
 export(get_bioactivity_details)
 export(get_bioactivity_details_batch)
+export(get_bioactivity_summary)
 export(get_cancer_hazard)
 export(get_cancer_hazard_batch)
 export(get_chem_info)
