Adjusted author information and added ggplot2 to `Suggests`.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Authors@R: c(person( "Kruse", "Paul", email = "kruse.paul@epa.gov", role =
     c("aut", "cre"), comment = c(ORCID = "0000-0001-5516-9717") ),
     person("Ring", "Caroline", email = "ring.caroline@epa.gov", 
-    role = c("aut", "cre"), comment = "0000-0002-0463-1251"))
+    role = c("aut"), comment = "0000-0002-0463-1251"))
 Description: A package for accessing chemical, hazard, and bioactivity data from the CCTE APIs. The data accessible from the APIs using this package is also available on the CompTox Chemical Dashboard and is provided to the user in a iformat conducive to data analysis.
 License: GPL (>= 3)
 Imports: 
@@ -24,6 +24,7 @@ RoxygenNote: 7.2.3
 Suggests: 
     countcolors,
     devtools,
+    ggplot2,
     knitr,
     rmarkdown,
     testthat (>= 3.0.0),
