--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Type: Package
 Package: ccdR
-Title: Access the CCTE APIs
+Title: Utilities for Interacting with the CCTE APIs in R
 Version: 0.1.0
-Authors@R: c(person( "Kruse", "Paul", email = "kruse.paul@epa.gov", role =
-    c("aut", "cre"), comment = c(ORCID = "0000-0001-5516-9717") ),
-    person("Ring", "Caroline", email = "ring.caroline@epa.gov", 
-    role = c("aut"), comment = "0000-0002-0463-1251"))
-Description: A package for accessing chemical, hazard, and bioactivity data from the CCTE APIs. The data accessible from the APIs using this package is also available on the CompTox Chemical Dashboard and is provided to the user in a iformat conducive to data analysis.
+Authors@R:c(person("Kruse", "Paul", email = "kruse.paul@epa.gov", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-5516-9717")),
+    	person("Ring", "Caroline", email = "ring.caroline@epa.gov", role = c("aut"), comment = c(ORCID = "0000-0002-0463-1251")),
+	person("Madison","Feshuk", role = "ctb", email = "feshuk.madison@epa.gov", comment = c(ORCID = "0000-0002-1390-6405")),
+	person("Carter", "Thunes", role = "ctb", email = "thunes.carter@epa.gov"),
+    	person("Jason","Brown",role = "ctb", email = "brown.jason@epa.gov"))
+Description: A package for accessing chemical, hazard, and bioactivity data from the CCTE APIs < https://api-ccte.epa.gov/docs/>. ccdR was developed to streamline the process of accessing the information available through the CCTE APIs without requiring prior knowledge of how to use APIs. All data is also available on the CompTox Chemical Dashboard (CCD) <https://comptox.epa.gov/dashboard/>. 
 License: GPL (>= 3)
 Imports: 
     cli,
@@ -33,7 +34,7 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     XML
-URL: https://bitbucket.epa.gov/projects/CCDR1/repos/ccdr/browse
+URL: https://github.com/USEPA/ccdR
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Depends: 
