--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,11 @@ export(chemical_starts_with_batch)
 export(get_all_assays)
 export(get_all_public_chemical_lists)
 export(get_annotation_by_aeid)
+export(get_annotation_by_aeid_batch)
 export(get_bioactivity_details)
 export(get_bioactivity_details_batch)
 export(get_bioactivity_summary)
+export(get_bioactivity_summary_batch)
 export(get_cancer_hazard)
 export(get_cancer_hazard_batch)
 export(get_chem_info)
