--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: ccdR
-Title: Utilities for Interacting with the CCTE APIs in R
+Title: Utilities for Interacting with the CCTE APIs
 Version: 1.0.0
 Authors@R: c(
             person("Paul", "Kruse", email = "kruse.paul@epa.gov", 
