--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,13 @@ export(get_chemicals_in_list)
 export(get_chemicals_in_list_batch)
 export(get_ecotox_hazard_by_dtxsid)
 export(get_ecotox_hazard_by_dtxsid_batch)
+export(get_exposure_functional_use)
+export(get_exposure_functional_use_category)
+export(get_exposure_functional_use_probability)
+export(get_exposure_list_presence_tags)
+export(get_exposure_list_presence_tags_by_dtxsid)
+export(get_exposure_product_data)
+export(get_exposure_product_data_puc)
 export(get_fate_by_dtxsid)
 export(get_fate_by_dtxsid_batch)
 export(get_genetox_details)
