Added function export for get_chemical_endpoint_status().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(get_chemical_by_property_range)
 export(get_chemical_by_property_range_batch)
 export(get_chemical_details)
 export(get_chemical_details_batch)
+export(get_chemical_endpoint_status)
 export(get_chemical_image)
 export(get_chemical_image_batch)
 export(get_chemical_lists_by_type)
