--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(get_chemicals_in_list)
 export(get_chemicals_in_list_batch)
 export(get_ecotox_hazard_by_dtxsid)
 export(get_ecotox_hazard_by_dtxsid_batch)
+export(get_exposure_endpoint_status)
 export(get_exposure_functional_use)
 export(get_exposure_functional_use_batch)
 export(get_exposure_functional_use_category)
