--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,8 @@ export(get_hazard_by_dtxsid)
 export(get_hazard_by_dtxsid_batch)
 export(get_human_hazard_by_dtxsid)
 export(get_human_hazard_by_dtxsid_batch)
+export(get_inchi)
+export(get_inchikey)
 export(get_lists_containing_chemical)
 export(get_lists_containing_chemical_batch)
 export(get_msready_by_dtxcid)
@@ -63,6 +65,7 @@ export(get_public_chemical_list_by_name)
 export(get_public_chemical_list_by_name_batch)
 export(get_skin_eye_hazard)
 export(get_skin_eye_hazard_batch)
+export(get_smiles)
 export(has_ccdr_option)
 export(has_ccdr_options)
 export(has_ccte_key)
