Added function export.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(get_msready_by_formula)
 export(get_msready_by_formula_batch)
 export(get_msready_by_mass)
 export(get_msready_by_mass_batch)
+export(get_msready_by_mass_with_error_batch)
 export(get_public_chemical_list_by_name)
 export(get_public_chemical_list_by_name_batch)
 export(get_skin_eye_hazard)
