--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(get_annotation_by_aeid)
 export(get_annotation_by_aeid_batch)
 export(get_bioactivity_details)
 export(get_bioactivity_details_batch)
+export(get_bioactivity_endpoint_status)
 export(get_bioactivity_summary)
 export(get_bioactivity_summary_batch)
 export(get_cancer_hazard)
@@ -61,6 +62,7 @@ export(get_genetox_summary)
 export(get_genetox_summary_batch)
 export(get_hazard_by_dtxsid)
 export(get_hazard_by_dtxsid_batch)
+export(get_hazard_endpoint_status)
 export(get_human_hazard_by_dtxsid)
 export(get_human_hazard_by_dtxsid_batch)
 export(get_inchi)
