--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Type: Package
-Package: ccdR
+Package: ctxR
 Title: Utilities for Interacting with the 'CTX' APIs
 Version: 1.0.0
 Authors@R: c(
@@ -19,7 +19,7 @@ Authors@R: c(
     	        )
 Description: Access chemical, hazard, bioactivity, and exposure data from the 
    Computational Toxicology and Exposure ('CTX') APIs 
-   <https://api-ccte.epa.gov/docs/>. 'ccdR' was developed to streamline the 
+   <https://api-ccte.epa.gov/docs/>. 'ctxR' was developed to streamline the 
    process of accessing the information available through the 'CTX' APIs 
    without requiring prior knowledge of how to use APIs. Most data is also 
    available on the CompTox Chemical Dashboard ('CCD') 
@@ -54,8 +54,8 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     XML
-URL: https://github.com/USEPA/ccdR
-BugReports: https://github.com/USEPA/ccdR/issues
+URL: https://github.com/USEPA/ctxR
+BugReports: https://github.com/USEPA/ctxR/issues
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Depends: 
