Renamed `register_ctxR()` to `register_ctx_api_key()` and adjusted exports.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,6 @@ export(get_smiles)
 export(has_ctxR_option)
 export(has_ctxR_options)
 export(has_ctx_key)
-export(register_ctxR)
+export(register_ctx_api_key)
 export(set_ctxR_option)
 export(showing_key)
