--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ export(get_chemical_synonym)
 export(get_chemical_synonym_batch)
 export(get_chemicals_in_list)
 export(get_chemicals_in_list_batch)
+export(get_demographic_exposure_prediction)
+export(get_demographic_exposure_prediction_batch)
 export(get_ecotox_hazard_by_dtxsid)
 export(get_ecotox_hazard_by_dtxsid_batch)
 export(get_exposure_endpoint_status)
@@ -56,6 +58,8 @@ export(get_exposure_product_data_batch)
 export(get_exposure_product_data_puc)
 export(get_fate_by_dtxsid)
 export(get_fate_by_dtxsid_batch)
+export(get_general_exposure_prediction)
+export(get_general_exposure_prediction_batch)
 export(get_genetox_details)
 export(get_genetox_details_batch)
 export(get_genetox_summary)
@@ -63,6 +67,8 @@ export(get_genetox_summary_batch)
 export(get_hazard_by_dtxsid)
 export(get_hazard_by_dtxsid_batch)
 export(get_hazard_endpoint_status)
+export(get_httk_data)
+export(get_httk_data_batch)
 export(get_human_hazard_by_dtxsid)
 export(get_human_hazard_by_dtxsid_batch)
 export(get_inchi)
