Added function export for `check_existence_by_dtxsid_batch()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,ctx_credentials)
 export(check_existence_by_dtxsid)
+export(check_existence_by_dtxsid_batch)
 export(chemical_contains)
 export(chemical_contains_batch)
 export(chemical_equal)
