Added function exports for `get_all_list_types()`, `get_chemicals_in_list_contain()`, `get_chemicals_in_list_contain_batch()`, `get_chemicals_in_list_exact()`, `get_chemicals_in_list_exact_batch()`, `get_chemicals_in_list_start()`, `get_chemicals_in_list_start_batch()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ctxR_hide_api_key)
 export(ctxR_show_api_key)
 export(ctx_key)
 export(get_all_assays)
+export(get_all_list_types)
 export(get_all_public_chemical_lists)
 export(get_annotation_by_aeid)
 export(get_annotation_by_aeid_batch)
@@ -42,6 +43,12 @@ export(get_chemical_synonym)
 export(get_chemical_synonym_batch)
 export(get_chemicals_in_list)
 export(get_chemicals_in_list_batch)
+export(get_chemicals_in_list_contain)
+export(get_chemicals_in_list_contain_batch)
+export(get_chemicals_in_list_exact)
+export(get_chemicals_in_list_exact_batch)
+export(get_chemicals_in_list_start)
+export(get_chemicals_in_list_start_batch)
 export(get_demographic_exposure_prediction)
 export(get_demographic_exposure_prediction_batch)
 export(get_ecotox_hazard_by_dtxsid)
