--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,11 +36,12 @@ jobs:
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
-          CTX_API_KEY: ${{ secrets.CTX_API_KEY }}
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
+        with:
+          CTX_API_KEY: ${{ secrets.CTX_API_KEY }}
 
 
       - name: Deploy to GitHub pages 🚀
