Set env variable for CTX_API_KEY.

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -24,6 +24,9 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Set ctxR api key
+        env:
+          CTX_API_KEY: ${{ secrets.CTX_API_KEY }}
       - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-pandoc@v2
@@ -40,8 +43,6 @@ jobs:
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
-        with:
-          CTX_API_KEY: ${{ secrets.CTX_API_KEY }}
 
 
       - name: Deploy to GitHub pages 🚀
