--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,8 +36,9 @@ jobs:
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
-        env:
-          CTX_API_KEY: ${{ secrets.CTX_API_KEY }}
+
+      - name: Set api key
+        run: ctxR::register_ctx_api_key(key = $secrets.CTX_API_KEY)
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
